fix container spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,21 +19,9 @@ p {
 /* containers */
 
 .container-fluid {
-  padding: 6% 10%;
   position: relative;
   z-index: 0;
-}
-
-#footer .container-fluid {
-  padding: 3% 15%;
-  position: relative;
-  z-index: 0;
-}
-
-#contact .container-fluid {
-  background-color: #fff;
-  border-radius: 5px;
-  padding: 3% 9%;
+  padding: 3% 8%;
 }
 
 /* Sections */
@@ -125,16 +113,6 @@ hr {
 }
 
 /* Pricing section */
-
-.card-body button:hover {
-  background-color: #8fc0a9;
-  color: #fff;
-}
-
-.card-body button {
-  width: 150px;
-  margin: auto;
-}
 
 /* Carousel section */
 
@@ -326,16 +304,17 @@ hr {
 }
 
 @media (max-width: 550px) {
-  .form-inline {
-    margin: 0 auto;
+  .newsletter .form-control input,
+  .newsletter .form-control button {
+    display: block;
+    width: 100%;
   }
 
-  .newsletter .form-control input {
-    width: 300px;
+  /* .newsletter .form-control input {
     padding: 5px 0;
   }
 
   .newsletter .form-control button {
     padding: 5px 0;
-  }
+  } */
 }
